# pydentification

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yaml  pytest.yaml
examples/: README.md
examples/core/: README.md  experiment.py  prediction.py  simulation.py
examples/development/: README.md  prediction.py  run.py  simulation.py
examples/prediction/: README.md  run.py
examples/simulation/: README.md  run.py
pydentification/: stubs.py
pydentification/data/: README.md  __init__.py  process.py  sequences.py  splits.py
pydentification/data/datamodules/: csv.py  prediction.py  simulation.py  splits.py
pydentification/experiment/: README.md  context.py  entrypoints.py  parameters.py  requirements.txt  run.py  sweep.py
pydentification/experiment/defaults/: report.py  save.py  train.py
pydentification/experiment/dumper/: code.py  models.py  parsing.py  wrapper.py
pydentification/experiment/reporters/: __init__.py  models.py  predictions.py
pydentification/experiment/storage/: code.py  compose.py  models.py  parsing.py  sync.py  wrapper.py
pydentification/loggers/: __init__.py  extended_logger.py
pydentification/measure/: README.md  functional.py  matrix.py  parameters.py
pydentification/metrics/: README.md  __init__.py  _compute.py  regression.py
pydentification/models/: README.md  __init__.py
pydentification/models/activations/: README.md
pydentification/models/attention/: README.md  __init__.py  embeddings.py  ff.py  readouts.py  self_attention.py
pydentification/models/attention/modules/: linear.py
pydentification/models/feedforward/: README.md  __init__.py
pydentification/models/fsnn/: model.py
pydentification/models/kernel_regression/: README.md  functional.py  kernels.py  memory.py
pydentification/models/modules/: __init__.py
pydentification/models/modules/activations/: __init__.py  functional.py  modules.py
pydentification/models/modules/feedforward/: model.py
pydentification/models/modules/losses/: __init__.py  modules.py
pydentification/models/modules/orthogonal/: fourier.py
pydentification/models/modules/recurrect/: gru.py  lstm.py
pydentification/models/modules/recurrent/: gru.py  lstm.py
pydentification/models/networks/: __init__.py
pydentification/models/networks/fsnn/: README.md  __init__.py  model.py
pydentification/models/networks/transformer/: README.md  __init__.py  block.py  embedding.py  encoding.py  feedforward.py  linear.py  self_attention.py
pydentification/models/nonparametric/: README.md  estimators.py  extra-requirements.txt  functional.py  kernels.py  memory.py
pydentification/models/nonparametric/memory/: __init__.py  abstract.py  descent.py  exact.py  faiss.py  sklearn.py  transformations.py
pydentification/models/orthogonal/: README.md  fourier.py
pydentification/models/recurrect/: README.md  __init__.py
pydentification/models/transformer/: README.md  __init__.py  embedding.py  feedforward.py  self_attention.py  training.py
pydentification/models/transformer/modules/: block.py
pydentification/training/: README.md
pydentification/training/bounded/: README.md  __init__.py  module.py
pydentification/training/hybrid/: README.md  estimator.py  module.py  trainer.py
pydentification/training/lightning/: callbacks.py  mixins.py  prediction.py  simulation.py  wrappers.py
pydentification/training/measure/: callback.py  lightning.py  monitor.py  postprocess.py  register.py  states.py  storage.py
pydentification/training/wrappers/: cast.py  inits.py  residual.py
scripts/: README.md  run.py  sweep.py
tests/: test_draft.py
tests/test_data/: test_process.py  test_sequences.py  test_splits.py  utils.py
tests/test_data/test_datamodules/: test_splits.py
tests/test_experiment/: test_parameters.py
tests/test_measure/: test_matrix.py  test_orthogonality.py  test_parameters.py  utils.py
tests/test_metrics/: test_regression.py
tests/test_models/: test_losses.py
tests/test_models/test_attention/: test_block.py  test_delay_line.py  test_projection.py  test_readout_and_embedding.py  test_self_attention.py
tests/test_models/test_kernel_regression/: test_functional.py  test_kernels.py  test_memory.py
tests/test_models/test_modules/: test_activation.py  test_fourier.py
tests/test_models/test_nonparameteric/: test_estimators.py  test_functional.py  test_kernels.py  test_memory.py
tests/test_models/test_orthogonal/: test_fourier.py
tests/test_models/test_transformer/: test_block.py  test_causality.py  test_delay_line.py  test_encoding.py  test_projection.py  test_self_attention.py
tests/test_training/: mocks.py  test_callbacks.py
tests/test_training/test_lightning/: conftest.py  mocks.py  test_callbacks.py
tests/test_training/test_measure/: test_postprocess.py  test_register.py
(+10 files in other folders)
