# build settings
[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pydentification/"]
include = ["pydentification/*"]

[project]
name = "pydentification"
version = "0.3.0"
description = "Toolbox for dynamical system identification with neural networks"
license = {text = "MIT"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Krzysztof Zając", email = "krzysztof.zajac@pwr.edu.pl"}
]

requires-python = ">= 3.10"
dependencies = [
    "click == 8.1.6",
    "numpy == 1.25.1",
    "scikit-learn == 1.3.0",
    "lightning == 2.2.0",
    "PyYaml == 6.0.1",
    "pandas == 2.0.3"
]

[project.optional-dependencies]
cpu = [
    "torch == 2.1.0",
]

experiment = [
    "plotly == 5.16.1",
    "wandb == 0.15.8"
]

nonparametric = [
    "pynndescent == 0.5.11",
]

complete = [
    "pydentification[cpu,experiment,nonparametric]",
]

# linter and test settings
[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = 'black'
line_length = 120
py_version = 310

[tool.mypy]
exclude = [
    'venv',
    '\.venv',
    '\.git',
    '__pycache__',
    'build',
    'dist',
    'tests',
]

[[tool.mypy.overrides]]
module = [
  "numpy.*",
  "sklearn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# source: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
