# build settings
[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pydentification/"]
include = ["pydentification/*"]

[project]
name = "pydentification"
version = "0.4.0"
description = "Toolbox for dynamical system identification with neural networks"
license = {text = "MIT"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Krzysztof Zając", email = "krzysztof.zajac@pwr.edu.pl"}
]

requires-python = ">= 3.11"
dependencies = [
    "numpy == 1.25.1",
    "scikit-learn == 1.3.0",
    "lightning == 2.2.1",
    "PyYaml == 6.0.1",
    "pandas == 2.0.3"
]

[project.optional-dependencies]
cpu = [
    "torch == 2.2.0",
]

experiment = [
    "plotly == 5.16.1",
    "lovely-tensors == 0.1.17",
    "wandb == 0.16.4"
]

complete = [
    "pydentification[cpu,experiment]",
]

# linter and test settings
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = 'black'
line_length = 120
py_version = 311

[tool.mypy]
exclude = [
    'venv',
    '\.venv',
    '\.git',
    '__pycache__',
    'build',
    'dist',
    'tests',
]

[[tool.mypy.overrides]]
module = [
  "numpy.*",
  "sklearn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",  # used to filter deprecation warning from lightning/pytorch/__init__.py:37
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
