# build settings
[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydentification*"]

[project]
name = "pydentification"
version = "0.5.0"
description = "Toolbox for dynamical system identification with neural networks"
license = {text = "MIT"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Krzysztof Zając", email = "krzysztof.zajac@pwr.edu.pl"}
]

requires-python = ">= 3.11"
dependencies = [
    "numpy == 1.26.4",
    "scikit-learn == 1.5.2",
    "lightning == 2.4.0",
    "PyYaml == 6.0.1",
    "pandas == 2.2.3",
    "h5py == 3.12.1"
]

[project.optional-dependencies]
cpu = [
    "torch == 2.4.1",
]

experiment = [
    "plotly == 5.24.1",
    "lovely-tensors == 0.1.17",
    "wandb == 0.18.3"
]

complete = [
    "pydentification[cpu,experiment]",
]

# linter and test settings
[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = 'black'
line_length = 120
py_version = 312

[tool.mypy]
exclude = [
    'venv',
    '\.venv',
    '\.git',
    '__pycache__',
    'build',
    'dist',
    'tests',
]

[[tool.mypy.overrides]]
module = [
  "numpy.*",
  "sklearn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",  # used to filter deprecation warning from lightning/pytorch/__init__.py:37
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
